💚 Update belgium-brussels.yml
Force Ubuntu 18.04 because security issue during download from CIRB server.

--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -23,7 +23,7 @@ jobs:
 
   diff-brussels:
     name: Generate difference for Brussels, Belgium
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
         with:
